Add initial app configuration and components
- Add initial configuration file with app name and version
- Add Header component with title
- Add CoinDisplay component to show the number of coins
- Add DonateButton component for donation functionality
- Add logic for timer and button disable state
- Add function to check for app updates and display alert
- Add function to show interstitial ad
- Add function to handle button click and increment coins
- Add function to share the app
- Update styles for container, text, and buttons

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "salve-anjos",
+    "name": "Salve Anjos",
     "slug": "salve-anjos",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -18,10 +18,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.alldevs.salveanjos"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "78ba1976-1d3a-42a5-950c-69d3be3aaa8c"
+      }
     }
   }
 }
