--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-dev-client": "~4.0.26",
     "expo-status-bar": "~1.12.1",
+    "notix-rn": "^0.1.64",
     "react": "18.2.0",
     "react-native": "0.74.5"
   },
